refactor: configurando permissionamento
